--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/Ecomerce.JPG" class="image fit thumb"><img src="images/Ecomerce.JPG" alt="" /></a>
+								<a href="images/E-Comerce.JPG" class="image fit thumb"><img src="images/E-Comerce.JPG" alt="" /></a>
 								<h3>Market Analysis and Sale Optimization</h3>
 								<p>Combining market analysis with sales data, this project identifies key trends and insights to develop effective sales strategies, driving higher conversion rates and market share.</p>
 							</article>
