--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="full-portfolio.html" id="Full-Portfolio-button" class="button" target="_blank">Full Portfolio</a></li>
+							<li><a href="full-portfolio.html" id="Full-Portfolio-button" class="button" target="_blank">Full Portfolisso</a></li>
 						</ul>
 					</section>
 					<div class="dropdown-section">
